# NYU_ROB_UY_2004

./: environment.yml  lab1.ipynb  pyproject.toml
Assignments/Assignment_1/: my_assignment_1.py
Assignments/Assignment_2/: my_assignment_2.py
Labs/: draft_notebook.ipynb
Labs/Lab1/: lab_1.py
Labs/Lab2/: 00_interface_and_sim.ipynb  01_record_fk_dataset.ipynb
Labs/Lab3/: lab_3.py  lab_3_playground.py
labs/: lab1.ipynb  lab2.ipynb
rob2004/: interface.py  rerun.py  ros2_robot.py  sim.py
rob2004/assets/robot/mujoco/: pupper_v3_complete.position.fixed_base.xml
rob2004/assets/robot/urdf/: pupper_v3.urdf
rob2004/parsers/: urdf.py
scripts/: bridge.py  robot.launch.py  robot_config.yaml  simulator_app.py
